--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -3,14 +3,7 @@
 
 name: Build and Release
 
-on:
-  push:
-    branches:
-      - master
-    tags:
-      - .*
-
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   build-and-publish:
