--- a/tests/resources/mkdocs.yml
+++ b/tests/resources/mkdocs.yml
@@ -5,5 +5,6 @@ plugins:
     - search
     - mkdocs-pom-parser-plugin:
         path: tests/resources/pom.xml
+        debug: true
         additional:
           SCM_CONNECTION: ./scm/connection
