--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
     # `setup.py check` is not needed. If your project contains a README.rst,
     # use `python setup.py check -m -r -s` instead.
     python setup.py check -m -s
-    flake8 .
+    flake8 --ignore=E501 .
     py.test tests {posargs}
 
 [flake8]
